--- a/fixes/index.html
+++ b/fixes/index.html
@@ -141,7 +141,7 @@ title: Math, Sonification, Plots
                 //    -moz-animation: myOrbit 4s linear infinite; /* Firefox 5-15 */
                 //      -o-animation: myOrbit 4s linear infinite; /* Opera 12+ */
                 //         animation: myOrbit 4s linear infinite; /* Chrome, Firefox 16+, 
-                                                                * IE 10+, Safari 5 */
+                                                                   * IE 10+, Safari 5 */
 
                 -webkit-animation-play-state:paused;
                 -moz-animation-play-state:paused;
@@ -152,6 +152,17 @@ title: Math, Sonification, Plots
                 -webkit-animation-duration: 5s;              /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
                 -webkit-animation-direction: normal;         /* Safari 4.0 - 8.0 */
+
+                -moz-animation-name: example;
+                -moz-animation-duration: 5s;
+                -moz-animation-iteration-count: infinite;
+                -moz-animation-direction: normal;
+
+                -o-animation-name: example;
+                -o-animation-duration: 5s;
+                -o-animation-iteration-count: infinite;
+                -o-animation-direction: normal;
+
                 animation-name: example;
                 animation-duration: 5s;
                 animation-iteration-count: infinite;
@@ -160,6 +171,14 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes example {
+            0%   {left:0px; top:0px;}
+            100% {left:790px; top:575px;}
+        }
+        @-moz-keyframes example {
+            0%   {left:0px; top:0px;}
+            100% {left:790px; top:575px;}
+        }
+        @-o-keyframes example {
             0%   {left:0px; top:0px;}
             100% {left:790px; top:575px;}
         }
