--- a/fixes/index.html
+++ b/fixes/index.html
@@ -263,14 +263,7 @@ title: Math, Sonification, Plots
                                 // elem.style.webkitAnimationPlayState = 'inherit';
                                 // elem.style.webkitAnimationPlayState = 'initial';
                                 elem.style.webkitAnimationPlayState = 'paused';
-                                // document.getElementById("myAnimation").style.top = "0px";
-                                // document.getElementById("myAnimation").style.left = "0px";
-                                elem.style.position = 'absolute';
-                                // elem.style.top = '0px';
-                                // elem.style.left = '0px';
-                                // elem.style.position = 'relative';
-                                elem.style.top = '0%';
-                                elem.style.left = '0%';
+                                elem.style.animation-iteration-count = "1";
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
