--- a/fixes/index.html
+++ b/fixes/index.html
@@ -263,7 +263,7 @@ title: Math, Sonification, Plots
                                 // elem.style.webkitAnimationPlayState = 'inherit';
                                 // elem.style.webkitAnimationPlayState = 'initial';
                                 elem.style.webkitAnimationPlayState = 'paused';
-                                elem.style.animationIteration-count = "1";
+                                elem.style.animationIterationCount = "1";
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
