--- a/fixes/index.html
+++ b/fixes/index.html
@@ -145,7 +145,7 @@ title: Math, Sonification, Plots
 
                 -webkit-animation-play-state:paused;
                 -moz-animation-play-state:paused;
-                -o-animation-play-state:paused; 
+                -o-animation-play-state:paused;
                 animation-play-state:paused;
 
                 -webkit-animation-name: example;             /* Safari 4.0 - 8.0 */
@@ -255,18 +255,18 @@ title: Math, Sonification, Plots
                         var elem = document.getElementById("myAnimation");
                         var audio = document.getElementById("audio");
                         // document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
-                        elem.style.animationDuration = audio.duration + "s";
+                        elem.style.animationDuration = (audio.duration - 1.0) + "s";
+                        elem.style.oAnimationDuration = audio.duration + "s";
+                        elem.style.mozAnimationDuration = audio.duration + "s";
                         elem.style.webkitAnimationDuration = audio.duration + "s";
-                        // var audio = document.getElementById("audio");
-                        // audio.volume = 0.4;
 
                         audio.onended = function() {
                                 // elem.style.webkitAnimationPlayState = 'inherit';
                                 // elem.style.webkitAnimationPlayState = 'initial';
                                 elem.style.animationPlayState = 'paused';
+                                elem.style.oAnimationPlayState = 'paused';
+                                elem.style.mozAnimationPlayState = 'paused';
                                 elem.style.webkitAnimationPlayState = 'paused';
-                                elem.style.animationIterationCount = "1";
-                                elem.style.webkitAnimationIterationCount = "1";
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
