--- a/fixes/index.html
+++ b/fixes/index.html
@@ -255,7 +255,7 @@ title: Math, Sonification, Plots
                         var elem = document.getElementById("myAnimation");
                         var audio = document.getElementById("audio");
                         // document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
-                        elem.style.animationDuration = (audio.duration - 1.0) + "s";
+                        elem.style.animationDuration = audio.duration + "s";
                         elem.style.oAnimationDuration = audio.duration + "s";
                         elem.style.mozAnimationDuration = audio.duration + "s";
                         elem.style.webkitAnimationDuration = audio.duration + "s";
