--- a/fixes/index.html
+++ b/fixes/index.html
@@ -266,7 +266,8 @@ title: Math, Sonification, Plots
                                 elem.style.mozAnimationPlayState = 'paused';
                                 elem.style.webkitAnimationPlayState = 'paused';
 
-                                elem.style.left = "100px";
+                                elem.style.left = "500px";
+                                elem.style.top = "500px";
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
