--- a/fixes/index.html
+++ b/fixes/index.html
@@ -266,8 +266,8 @@ title: Math, Sonification, Plots
                                 elem.style.mozAnimationPlayState = 'paused';
                                 elem.style.webkitAnimationPlayState = 'paused';
 
-                                elem.style.left = "500px";
-                                elem.style.top = "500px";
+                                elem.style.left = "50%";
+                                elem.style.top = "50%";
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
