--- a/fixes/index.html
+++ b/fixes/index.html
@@ -123,10 +123,6 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 20px;
                 height: 20px;
-                // top: 0;
-                // left: 50%;
-                // top: 0px;
-                // left: 0px;
                 position: absolute;
                 background-color: #555;
                 border-radius: 50%;
@@ -172,19 +168,23 @@ title: Math, Sonification, Plots
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes example {
             0%   {left:0px; top:0px;}
+            50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
         @-moz-keyframes example {
             0%   {left:0px; top:0px;}
+            50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
         @-o-keyframes example {
             0%   {left:0px; top:0px;}
+            50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
         /* Standard syntax */
         @keyframes example {
             0%   {left:0px; top:0px;}
+            50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
 
@@ -265,9 +265,6 @@ title: Math, Sonification, Plots
                                 elem.style.oAnimationPlayState = 'paused';
                                 elem.style.mozAnimationPlayState = 'paused';
                                 elem.style.webkitAnimationPlayState = 'paused';
-
-                                elem.style.left = "50%";
-                                elem.style.top = "50%";
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
