--- a/fixes/index.html
+++ b/fixes/index.html
@@ -168,23 +168,23 @@ title: Math, Sonification, Plots
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes example {
             0%   {left:0px; top:0px;}
-            50%  {background-color: white; left:370px; top:260px}
+            // 50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
         @-moz-keyframes example {
             0%   {left:0px; top:0px;}
-            50%  {background-color: white; left:370px; top:260px}
+            // 50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
         @-o-keyframes example {
             0%   {left:0px; top:0px;}
-            50%  {background-color: white; left:370px; top:260px}
+            // 50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
         /* Standard syntax */
         @keyframes example {
             0%   {left:0px; top:0px;}
-            50%  {background-color: white; left:370px; top:260px}
+            // 50%  {background-color: white; left:370px; top:260px}
             100% {left:790px; top:575px;}
         }
 
