--- a/fixes/index.html
+++ b/fixes/index.html
@@ -225,23 +225,14 @@ title: Math, Sonification, Plots
 
 <body>
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
-    <div><p>
-        Select High Contrast, or Standard contrast for the webpage.
-    </div></p>
-
-    <div class="btn-group">
-        <button type="button" onclick="setBG_Black()">HIGH CONTRAST</button>
-        <button type="button" onclick="setBG_White()">STRD CONTRAST</button>
-    </div>
-
     <div class="center fit myContainer">
-        <img id="img_1" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+        <img id="line_neg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
         <script>
                 function change() {
                         var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
                             img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
-                        var imgElement = document.getElementById('img_1');
+                        var imgElement = document.getElementById('line_neg');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
         </script>
