--- a/fixes/index.html
+++ b/fixes/index.html
@@ -235,6 +235,19 @@ title: Math, Sonification, Plots
                         var imgElement = document.getElementById('line_neg');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
+
+        function setBG_Black() {
+                            document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+                            document.body.style.color = "yellow";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                            line_neg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+                        }
+                        function setBG_White() {
+                            document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+                            document.body.style.color = "black";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                            line_neg.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                        }
         </script>
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
