--- a/fixes/index.html
+++ b/fixes/index.html
@@ -226,13 +226,13 @@ title: Math, Sonification, Plots
 <body>
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
-        <img id="line_neg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+        <img id="lineNeg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
         <script>
                 function change() {
                         var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
                             img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
-                        var imgElement = document.getElementById('line_neg');
+                        var imgElement = document.getElementById('lineNeg');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
         </script>
