--- a/fixes/index.html
+++ b/fixes/index.html
@@ -224,6 +224,11 @@ title: Math, Sonification, Plots
 </head>
 
 <body>
+    <div class="btn-group">
+                            <button type="button" onclick="setBG_Black()">HIGH CONTRAST</button>
+                            <button type="button" onclick="setBG_White()">STD  CONTRAST</button>
+                        </div>
+    
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
         <img id="lineNeg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
@@ -235,6 +240,22 @@ title: Math, Sonification, Plots
                         var imgElement = document.getElementById('lineNeg');
                         imgElement.src = (imgElement.src === img1)? img2 : img1;
                 }
+
+
+                var gtech = document.getElementById("gtech");
+                        var lineNeg = document.getElementById("lineNeg");
+                        function setBG_Black() {
+                            document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+                            document.body.style.color = "yellow";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                            lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+                        }
+                        function setBG_White() {
+                            document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+                            document.body.style.color = "black";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                            lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
+                        }
         </script>
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
