--- a/index.html
+++ b/index.html
@@ -54,21 +54,18 @@ title: Math, Sonification, Plots
                     imgElement.src = (imgElement.src === img1)? img2 : img1;
             }
 
-            //var gtech =  document.getElementById("gtech");
-            //var lineNeg =  document.getElementById("lineNeg");
+            var gtech =  document.getElementById("gtech");
             var hyperbola =  document.getElementById("hyperbola");
             function setBG_Black() {
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                 document.body.style.color = "yellow";
-                //gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-                //lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+                gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
                 hyperbola.src = "https://rbobkoskie3.github.io/images/HC_3D_Hyperbola.png";
             }
             function setBG_White() {
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                 document.body.style.color = "black";
-                //gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                //lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
+                gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
                 hyperbola.src = "https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png";
             }                
         </script>
