--- a/fixes/index.html
+++ b/fixes/index.html
@@ -224,6 +224,13 @@ title: Math, Sonification, Plots
 </head>
 
 <body>
+    <nav><ul>
+        <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
+        <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
+        <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
+    </ul></nav>
+    <br><br>
+
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
         <img id="lineNeg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
