--- a/fixes/index.html
+++ b/fixes/index.html
@@ -224,12 +224,15 @@ title: Math, Sonification, Plots
 </head>
 
 <body>
-    <nav><ul>
-        <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
-        <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
-        <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
-    </ul></nav>
     <br><br>
+    <p>LINES:
+        <nav><ul>
+            <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
+            <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
+            <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
+        </ul></nav>
+    </p>
+    <br>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
