--- a/fixes/index.html
+++ b/fixes/index.html
@@ -225,13 +225,13 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
-    <p>LINES:
+    <div><p>LINES:
         <nav><ul>
             <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
             <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
             <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
         </ul></nav>
-    </p>
+    </p></div>
     <br>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
