--- a/fixes/index.html
+++ b/fixes/index.html
@@ -225,11 +225,13 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
-    <div><p>LINES:
+    <nav><ul>
+        <div><p>LINES:
             <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
             <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
             <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
-    </p></div>
+        </p></div>
+    </ul></nav>
     <br>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
