--- a/fixes/index.html
+++ b/fixes/index.html
@@ -225,12 +225,12 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
-    <nobr>LINES:</nobr>
-    <nav><ul>
-        <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
-        <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
-        <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
-    </ul></nav>
+    <div><p>LINES:
+        <a href="/line" target="_HCS">NEG SLOPE</a>
+        <a href="/circle" target="_HCS">POS SLOPE</a>
+        <a href="/parabola" target="_HCS">ZERO SLOPE</a>
+    </p></div>
+    <br>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div class="center fit myContainer">
