--- a/fixes/index.html
+++ b/fixes/index.html
@@ -226,9 +226,9 @@ title: Math, Sonification, Plots
 <body>
     <br><br>
     <div><p>LINES:
-        <a href="/line" target="_HCS">NEG SLOPE</a>
-        <a href="/circle" target="_HCS">POS SLOPE</a>
-        <a href="/parabola" target="_HCS">ZERO SLOPE</a>
+        <a href="/line" target="_HCS">Neg. Slope   </a>
+        <a href="/circle" target="_HCS">Pos. Slope   </a>
+        <a href="/parabola" target="_HCS">Zero Slope</a>
     </p></div>
     <br>
 
