--- a/fixes/index.html
+++ b/fixes/index.html
@@ -225,10 +225,12 @@ title: Math, Sonification, Plots
 
 <body>
     <br><br>
-    <div><p>LINES:
-        <a href="/line" target="_HCS">NEG SLOPE</a>   
-        <a href="/circle" target="_HCS">POS SLOPE</a>   
-        <a href="/parabola" target="_HCS">ZERO SLOPE</a>
+    <div><p><nobr>LINES:</nobr>
+        <nav><ul>
+            <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
+            <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
+            <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
+        </ul></nav>
     </p></div>
     <br>
 
