--- a/fixes/index.html
+++ b/fixes/index.html
@@ -247,12 +247,14 @@ title: Math, Sonification, Plots
             var gtech = document.getElementById("gtech");
             var lineNeg = document.getElementById("lineNeg");
             function setBG_Black() {
+                document.getElementById("myAnimation").style.backgroundColor = "yellow";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                 document.body.style.color = "yellow";
                 gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
                 lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
             }
             function setBG_White() {
+                document.getElementById("myAnimation").style.backgroundColor = "black";
                 document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                 document.body.style.color = "black";
                 gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
