--- a/fixes/index.html
+++ b/fixes/index.html
@@ -35,6 +35,8 @@ title: Math, Sonification, Plots
         }
 
         .volDec {
+            background-color: #8A2BE2; /* BlueViolet background */
+            color: Yellow; /* Yellow text */
             width: 0;
             height: 0;
             // text-align: left;
@@ -48,6 +50,8 @@ title: Math, Sonification, Plots
         }
 
         .volInc {
+            background-color: #8A2BE2; /* BlueViolet background */
+            color: Yellow; /* Yellow text */
             width: 60;
             height: 0;
             // text-align: left;
