--- a/fixes/index.html
+++ b/fixes/index.html
@@ -36,7 +36,7 @@ title: Math, Sonification, Plots
 
         .volDec {
             background-color: #8A2BE2; /* BlueViolet background */
-            color: Yellow; /* Yellow text */
+            color: white; /* White text */
             width: 0;
             height: 0;
             // text-align: left;
@@ -51,7 +51,7 @@ title: Math, Sonification, Plots
 
         .volInc {
             background-color: #8A2BE2; /* BlueViolet background */
-            color: Yellow; /* Yellow text */
+            color: white; /* White text */
             width: 60;
             height: 0;
             // text-align: left;
