--- a/fixes/index.html
+++ b/fixes/index.html
@@ -231,7 +231,7 @@ title: Math, Sonification, Plots
     <br><br>
     <nav><ul>
         <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
-        <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
+        <li><a href="/line/linePosSlope.html" target="_HCS">POS SLOPE</a></li>
         <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
     </ul></nav>
 
