--- a/fixes/index.html
+++ b/fixes/index.html
@@ -230,7 +230,7 @@ title: Math, Sonification, Plots
 <body>
     <br><br>
     <nav><ul>
-        <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
+        <li><a href="." target="_HCS">NEG SLOPE</a></li>
         <li><a href="/line/linePosSlope.html" target="_HCS">POS SLOPE</a></li>
         <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
     </ul></nav>
