--- a/fixes/index.html
+++ b/fixes/index.html
@@ -231,8 +231,8 @@ title: Math, Sonification, Plots
     <br><br>
     <nav><ul>
         <li><a href="." target="_self">NEG SLOPE</a></li>
-        <li><a href="/line/linePosSlope.html" target="_HCS">POS SLOPE</a></li>
-        <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
+        <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
+        <li><a href="/parabola" target="_self">ZERO SLOPE</a></li>
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
